--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>TITLE</title>
+    <title>Kurt Reynolds: Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
